Revision history for Code-TidyAll

** denotes an incompatible change

0.14  Sep 30, 2012

0.13  Sep 30, 2012

* Fixes
  - Adjust MasonTidy plugin for new API
  - Remove Util.t containing only author-only tests

0.12  Sep 27, 2012

* Plugins
  - Add podspell plugin (POD spell checker)

* Improvements
  - Add --iterations flag to run tidier transforms multiple times
  - Allow .tidyallrc as alternative to tidyall.ini
  - Allow git prereceive hook to be bypassed by pushing an identical set of commits
    several consecutive times (allow_repeated_push)
  - Add handcrafted usage w/summary of options, instead of Pod::Usage

0.11  Sep 21, 2012

* Improvements
  - Allow multiple select and ignore patterns, separated by whitespace or on separate lines
  - Add -l/--list flag to show which plugins match which files
  - Add conf_name parameter to specify name other than tidyall.ini
  - Redirect stdout to stderr with -p/--pipe, so that stdout is dedicated to the tidied content
  - In tidyall.el, hide error buffer on successful tidy

* Fixes
  - Handle argv/config errors correctly in various plugins
  - Eliminate double-printed error with -p/--pipe
  - Allow relative paths to -p/--pipe

0.10  Sep 12, 2012

* Plugins
  - Add masontidy plugin (Mason component tidier)
  - Add jslint plugin (javascript validator)

0.09  Sep 11, 2012

* Fixes
  - Remove use of ex-dependency Hash::MoreUtils from bin/tidyall (Jason Wieland)
  - Add IPC::System::Simple and Pod::Usage to deps (Jason Wieland)

0.08  Sep 10, 2012

* Plugins
  - Add js-beautify plugin (javascript tidier)
  - Add jshint plugin (javascript validator)

* Improvements
  - Add podchecker plugin
  - Add -p/--pipe flag to read from STDIN and write to STDOUT
  - Allow tidyall.el to work in narrowed regions
  - Make plugins into Moo classes, pass configuration as attributes

* Fixes
  - Remove unused SVN::Look - perl-code-tidyall/pull/1 (Pedro Melo)
  - Filter just files from git status in Code::TidyAll::Git::Precommit (Pedro Melo)
