@@ -13,7 +13,7 @@ use warnings;
 use base qw(Exporter);
 
 our @EXPORT_OK =
-  qw(abs2rel basename can_load dirname dump_one_line mkpath pushd read_file realpath rel2abs tempdir_simple trim uniq write_file );
+  qw(abs2rel basename can_load dirname dump_one_line mkpath pushd read_dir read_file realpath rel2abs tempdir_simple trim uniq write_file);
 
 sub can_load {
 
@@ -62,6 +62,13 @@ sub trim {
     my ($str) = @_;
     for ($str) { s/^\s+//; s/\s+$// }
     return $str;
+}
+
+sub read_dir {
+    my ($dir) = @_;
+    opendir( my $dirh, $dir ) or die "could not open $dir: $!";
+    my @dir_entries = grep { $_ ne "." && $_ ne ".." } readdir($dirh);
+    return @dir_entries;
 }
 
 sub read_file {
